@@ -374,7 +374,7 @@ class NucleicSelection(Selection):
         awk '/RESI/ {printf "'"'"%s"'"',",$2 }' top_all27_prot_na.rtf
     * recognized: 'ADE', 'URA', 'CYT', 'GUA', 'THY'
     """
-    nucl_res = dict([(x,None) for x in ['ADE', 'URA', 'CYT', 'GUA', 'THY']])
+    nucl_res = dict([(x,None) for x in ['ADE', 'URA', 'CYT', 'GUA', 'THY','DA','DC','DG','DT','RA','RU','RG','RC']])
     def _apply(self, group):
         return set([a for a in group.atoms if a.resname in self.nucl_res])
     def __repr__(self):
@@ -387,9 +387,9 @@ class NucleicXstalSelection(Selection):
 
     * from the Charmm force field::
         awk '/RESI/ {printf "'"'"%s"'"',",$2 }' top_all27_prot_na.rtf
-    * recognized: 'A', 'U', 'C', 'G', 'DT','DA','DC','DG'
+    * recognized: 'A', 'U', 'C', 'G','T'
     """
-    nucl_res = dict([(x,None) for x in ['A', 'U', 'C', 'G', 'DT','DA','DC','DG']])
+    nucl_res = dict([(x,None) for x in ['A', 'T', 'U', 'C', 'G']])
     def _apply(self, group):
         return set([a for a in group.atoms if a.resname in self.nucl_res])
     def __repr__(self):
